--- a/app/src/main/res/layout/activity_container.xml
+++ b/app/src/main/res/layout/activity_container.xml
@@ -8,7 +8,12 @@
     tools:context="edu.webfutuandroid.ing26sistemas.gamescenral.view.ContainerActivity">
 
 
-    <include layout="@layout/actionbar_toolbar" />
+    <FrameLayout
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/bottonbar_height"
+        />
 
     <include layout="@layout/buttonbar" />
 
