--- a/app/src/main/res/layout/picture_card.xml
+++ b/app/src/main/res/layout/picture_card.xml
@@ -4,13 +4,16 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="@dimen/height_cardview"
-    carview:cardCornerRadius="@dimen/cornerradius_cardview">
+    carview:cardCornerRadius="@dimen/cornerradius_cardview"
+    android:layout_marginBottom="@dimen/activity_padding_vertical"
+    >
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <ImageView
+            android:id="@+id/pictureCard"
             android:layout_width="match_parent"
             android:layout_height="@dimen/height_cardview"
             android:background="@drawable/edgar_perea"
@@ -21,8 +24,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:orientation="vertical"
-            android:paddingLeft="@dimen/activity_vertical_margin"
-            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_padding_horizontal"
+            android:paddingBottom="@dimen/activity_padding_vertical"
             android:background="@color/backgroundtext_card"
             >
 
